[project]
name = "sdv-exploratory-project"
version = "0.1.0"
description = ""
authors = [{ name = "kPinney", email = "REDACTED@REDACTED.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "sdv (>=1.26.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
]


[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
